# gemma-mythos-distill-

./: .gitignore  README.md  SENTINEL_Engineering_Specification_v2.md  pyproject.toml
sentinel/: __init__.py  config.py
sentinel/agent/: __init__.py  state_machine.py
sentinel/agent/tools/: __init__.py  definitions.py
sentinel/alignment/: __init__.py  dpo_synthesis.py  sandbox.py
sentinel/cli/: __init__.py  extract_deltas.py  run_agent.py  run_eval.py  train_dpo.py  train_sft.py
sentinel/data/: __init__.py  commit_delta.py  cwe_mapper.py  integrity.py
sentinel/evaluation/: __init__.py
sentinel/training/: __init__.py  nvfp4_config.py  sft.py
tests/: test_sentinel.py
