[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentinel"
version = "0.1.0"
description = "SENTINEL: Autonomous Software Vulnerability Discovery and Remediation"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Marcel Butucea"},
]

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "deepspeed>=0.15.0",
    "datasets>=3.0.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
    "pygit2>=1.15.0",
    "tree-sitter>=0.23.0",
    "pylsp-mypy>=0.6.0",
    "sentence-transformers>=3.0.0",
    "docker>=7.0.0",
    "pydantic>=2.9.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
]

[project.scripts]
sentinel-extract = "sentinel.cli.extract_deltas:main"
sentinel-train-sft = "sentinel.cli.train_sft:main"
sentinel-train-dpo = "sentinel.cli.train_dpo:main"
sentinel-agent = "sentinel.cli.run_agent:main"
sentinel-eval = "sentinel.cli.run_eval:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
